Resources singular
- change base URL
- add guidelines
